# strongly-connected-components

./: CMakeLists.txt  SCC-finder.h
tests/: find-SCC-test.cpp  finish-time-test.cpp  graph-transposition-test.cpp  large-graph-SCC-test.cpp  make-adjacency-list-test.cpp  object-string.h
